feat: Enhance website with new video content and localization improvements
- Updated sections.css to include styles for video elements and added comments for clarity.
- Modified index.html to improve SEO with data attributes for translation and updated service descriptions.
- Added new localization keys in en.json, es.json, and pt-br.json for improved service titles and descriptions.
- Created new HTML files for Lumasky services in English and Spanish, enhancing multilingual support.
- Implemented video hover functionality in script.js for better user interaction with service items.
- Added new video files for service showcases to enrich content presentation.

--- a/index.html
+++ b/index.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>DronyImagem - Drone Solutions</title>
+    <title data-translate-key="pageTitle">DronyImagem - Drone Solutions</title>
     <meta
       name="description"
+      data-translate-key="metaDescription"
       content="Especialistas em filmagem com drones, transmissão ao vivo aérea e shows de drones com luzes. Transforme seu evento em um espetáculo visual."
     />
     <meta
       name="keywords"
+      data-translate-key="metaKeywords"
       content="drone, filmagem aérea, show de drones, drones luzes, filmagem com drone, mato grosso, cuiabá, dronyimagem"
     />
     <meta name="author" content="DronyImagem" />
-    <meta property="og:title" content="DronyImagem - Drone Solutions" />
+    <meta
+      property="og:title"
+      data-translate-key="ogTitle"
+      content="DronyImagem - Drone Solutions"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://dronyimagem.com.br/" />
     <meta
@@ -23,9 +29,14 @@
     />
     <meta
       property="og:description"
+      data-translate-key="ogDescription"
       content="Especialistas em filmagem com drones, transmissão ao vivo aérea e shows de drones com luzes. Transforme seu evento em um espetáculo visual."
     />
-    <meta property="og:site_name" content="DronyImagem" />
+    <meta
+      property="og:site_name"
+      data-translate-key="ogSiteName"
+      content="DronyImagem"
+    />
     <meta property="og:locale" content="pt_BR" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -43,7 +54,6 @@
         <div class="logo-text">
           <a href="#">DronyImagem</a>
         </div>
-
         <nav class="main-nav">
           <ul>
             <li>
@@ -63,11 +73,10 @@
             </li>
             <li>
               <a
-                href="https://lumasky.show/"
-                target="_blank"
-                rel="noopener noreferrer"
+                href="lumasky.html"
                 class="btn-lumasky"
                 data-translate-key="navLumasky"
+                data-translate-href="lumaskyPageLink"
               >
                 Lumasky
               </a>
@@ -91,7 +100,6 @@
             </li>
           </ul>
         </nav>
-
         <div class="header-right-controls desktop-only">
           <div class="language-selector">
             <a href="#" class="lang-link lang-active" data-lang="pt-br"
@@ -108,7 +116,6 @@
           >
         </div>
       </div>
-
       <button class="menu-toggle" aria-label="Abrir menu" aria-expanded="false">
         &#9776;
       </button>
@@ -129,7 +136,7 @@
         class="hero-logo"
       />
       <div class="hero-content">
-        <h1>VOE ALTO<br />CRIE VISÃO</h1>
+        <h1 data-translate-key="heroTitle">VOE ALTO<br />CRIE VISÃO</h1>
         <p data-translate-key="heroSubtitle">
           A DronyImagem é especialista em filmagem com drones, transmissão ao
           vivo aérea e shows de drones com luzes, criando experiências únicas
@@ -152,33 +159,38 @@
         </p>
         <div class="solucoes-grid">
           <div class="solucao-item">
-            <img
-              src="image1.jpg"
-              alt="Filmagem Aérea Profissional"
-              class="solucao-imagem"
-            />
+            <video
+              class="solucao-video"
+              src="video-card1.mp4"
+              muted
+              loop
+              preload="metadata"
+              playsinline
+            ></video>
             <div class="solucao-texto">
-              <h3 data-translate-key="service1Title">
-                🎬 Filmagem Aérea Profissional
+              <h3 data-translate-key="serviceRealEstateTitle">
+                📸 Imagens aéreas de imóveis
               </h3>
-              <p data-translate-key="service1Desc">
-                Capte cada detalhe do seu evento com uma filmagem com drone em
-                alta resolução. Ideal para shows, casamentos, eventos
-                corporativos, campanhas publicitárias e produções
-                institucionais. Nossos drones registram ângulos únicos que
-                destacam a grandiosidade e a energia do seu evento.
+              <p data-translate-key="serviceRealEstateDesc">
+                Valorize seu imóvel ou empreendimento com fotos e vídeos aéreos
+                de alta qualidade. Destaque a localização, infraestrutura e
+                diferenciais de forma impactante para seus clientes.
               </p>
             </div>
           </div>
+
           <div class="solucao-item">
-            <img
-              src="image2.jpg"
-              alt="Transmissão Aérea Ao Vivo"
-              class="solucao-imagem"
-            />
+            <video
+              class="solucao-video"
+              src="video-card2.mp4"
+              muted
+              loop
+              preload="metadata"
+              playsinline
+            ></video>
             <div class="solucao-texto">
-              <h3 data-translate-key="service2Title">
-                📡 Transmissão Aérea Ao Vivo
+              <h3 data-translate-key="serviceEventsTitle">
+                🎬 Vídeos aéreos de eventos
               </h3>
               <p data-translate-key="service2Desc">
                 Surpreenda seu público com uma transmissão ao vivo feita por
@@ -189,15 +201,19 @@
               </p>
             </div>
           </div>
+
           <div class="solucao-item solucao-item-link">
-            <img
-              src="image3.jpg"
-              alt="Show de Drones com Luzes"
-              class="solucao-imagem"
-            />
+            <video
+              class="solucao-video"
+              src="video-card3.mp4#t=3"
+              muted
+              loop
+              preload="metadata"
+              playsinline
+            ></video>
             <div class="solucao-texto">
-              <h3 data-translate-key="service3Title">
-                🌟 Show de Drones com Luzes
+              <h3 data-translate-key="serviceLumaskyTitle">
+                ✨ Representante Lumasky no Brasil
               </h3>
               <p data-translate-key="service3Desc">
                 Encante o público com um show de drones sincronizados com luzes
@@ -208,12 +224,12 @@
               </p>
             </div>
             <a
-              href="https://lumasky.show/"
-              target="_blank"
-              rel="noopener noreferrer"
+              href="lumasky.html"
               class="card-link-overlay"
-              aria-label="Saiba mais sobre shows com Lumasky (link externo)"
-            ></a>
+              aria-label="Saiba mais sobre shows com Lumasky"
+              data-translate-href="lumaskyPageLink"
+            >
+            </a>
           </div>
         </div>
       </div>
@@ -276,7 +292,7 @@
             </p>
           </div>
           <div class="sobre-image">
-            <img src="image4.png" alt="Equipe DronyImagem em campo" />
+            <img src="image4.jpg" alt="Equipe DronyImagem em campo" />
           </div>
         </div>
       </div>
