--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             </p>
           </div>
           <div class="sobre-image">
-            <img src="image4.jpg" alt="Equipe DronyImagem em campo" />
+            <img src="image4.png" alt="Equipe DronyImagem em campo" />
           </div>
         </div>
       </div>
