--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta property="og:url" content="https://dronyimagem.com.br/" />
     <meta
       property="og:image"
-      content="https://mattzump.github.io/site-drones-empresa/image4.jpg"
+      content="https://mattosvmp.github.io/site-drones-empresa/image4.png"
     />
     <meta
       property="og:description"
@@ -153,7 +153,9 @@
 
     <section id="solucoes" class="solucoes-section">
       <div class="container">
-        <h2 data-translate-key="servicesTitle">🚁 NOSSOS SERVIÇOS</h2>
+        <h2 class="section-title-with-icon" data-translate-key="servicesTitle">
+          Soluções
+        </h2>
         <p class="subtitle" data-translate-key="servicesSubtitle">
           Do céu ao seu público: filmagem, transmissão e espetáculos.
         </p>
@@ -237,7 +239,9 @@
 
     <section id="portifolio" class="portifolio-section">
       <div class="container">
-        <h2 data-translate-key="portfolioTitle">🎥 PORTFÓLIO / TRABALHO</h2>
+        <h2 class="section-title-with-icon" data-translate-key="portfolioTitle">
+          Portfólio
+        </h2>
         <p class="subtitle" data-translate-key="portfolioSubtitle">
           De filmagens aéreas a espetáculos de luzes com drones, a DronyImagem
           já transformou eventos corporativos, festivais e produções
@@ -247,15 +251,17 @@
         </p>
         <div class="portifolio-cta-grid">
           <a
-            href="#"
+            href="galeria-fotos.html"
             class="btn-principal"
             data-translate-key="portfolioBtnPhotos"
+            data-translate-href="galleryPhotosPageLink"
             >📸 Galeria de Fotos</a
           >
           <a
-            href="#"
+            href="galeria-videos.html"
             class="btn-principal"
             data-translate-key="portfolioBtnVideos"
+            data-translate-href="galleryVideosPageLink"
             >🎬 Galeria de Vídeos</a
           >
         </div>
@@ -264,7 +270,9 @@
 
     <section id="sobre" class="sobre-section">
       <div class="container">
-        <h2 data-translate-key="aboutTitle">🧭 SOBRE</h2>
+        <h2 class="section-title-with-icon" data-translate-key="aboutTitle">
+          Sobre
+        </h2>
         <p class="subtitle" data-translate-key="aboutSubtitle">
           Tecnologia, criatividade e inovação no ar
         </p>
@@ -300,9 +308,11 @@
 
     <section id="valores" class="valores-section">
       <div class="container">
-        <h2 data-translate-key="valuesTitle">NOSSOS VALORES</h2>
+        <h2 class="section-title-with-icon" data-translate-key="valuesTitle">
+          Valores
+        </h2>
         <p class="subtitle" data-translate-key="valuesSubtitle">
-          Os princípios que guiam nossa visão e excelência em cada serviço.
+          Abaixo estão os principais pontos que guiam nosso valor de marca:
         </p>
         <div class="valores-grid">
           <div class="valor-item">
@@ -335,15 +345,17 @@
 
     <section id="missao" class="missao-section">
       <div class="container">
-        <h2 data-translate-key="missionTitle">NOSSA MISSÃO</h2>
+        <h2 class="section-title-with-icon" data-translate-key="missionTitle">
+          Missão
+        </h2>
         <p class="subtitle" data-translate-key="missionSubtitle">
-          Ser o elo entre o céu e a visão criativa, elevando a percepção e o
+          Ser uma visão criativa a partir do alto, elevando a percepção e o
           impacto dos seus projetos.
         </p>
         <div class="missao-content">
           <p data-translate-key="missionDesc">
             Nossa missão é transformar seu evento em um espetáculo visual
-            memorable. Usamos tecnologia aérea de ponta—de filmagens
+            memorável. Usamos tecnologia aérea de ponta, a partir de filmagens
             cinematográficas a shows de luzes—para contar sua história do alto,
             com segurança, criatividade e impacto.
           </p>
@@ -353,14 +365,24 @@
 
     <section id="contato" class="contato-section">
       <div class="container">
-        <h2 data-translate-key="contactTitle">ENTRE EM CONTATO</h2>
+        <h2 class="section-title-with-icon" data-translate-key="contactTitle">
+          ENTRE EM CONTATO
+        </h2>
         <p class="subtitle" data-translate-key="contactSubtitle">
           Vamos conversar sobre o seu próximo projeto aéreo!
         </p>
-        <form action="#" method="POST" class="contato-form">
+        <form
+          action="https://formspree.io/f/SUA_CHAVE_DO_FORMSPREE"
+          method="POST"
+          class="contato-form"
+        >
           <div class="form-group">
             <label for="nome" data-translate-key="formName">Nome:</label>
             <input type="text" id="nome" name="nome" required />
+          </div>
+          <div class="form-group">
+            <label for="phone" data-translate-key="formPhone">Telefone:</label>
+            <input type="tel" id="phone" name="phone" required />
           </div>
           <div class="form-group">
             <label for="email" data-translate-key="formEmail">Email:</label>
@@ -368,7 +390,7 @@
           </div>
           <div class="form-group">
             <label for="mensagem" data-translate-key="formMessage"
-              >Mensagem:</label
+              >Descreva um pouco do seu evento ou projeto:</label
             >
             <textarea
               id="mensagem"
