feat: Update hero titles in multiple languages for consistency and improved punctuation

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         class="hero-logo"
       />
       <div class="hero-content">
-        <h1 data-translate-key="heroTitle">VOE ALTO<br />CRIE VISÃO</h1>
+        <h1 data-translate-key="heroTitle">VOE ALTO,<br />CRIE VISÃO.</h1>
         <p data-translate-key="heroSubtitle">
           A DronyImagem é especialista em filmagem com drones, transmissão ao
           vivo aérea e shows de drones com luzes, criando experiências únicas
