fix: Correct punctuation in mission description for improved clarity in English and Portuguese localization

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
           <p data-translate-key="missionDesc">
             Nossa missão é transformar seu evento em um espetáculo visual
             memorável. Usamos tecnologia aérea de ponta, a partir de filmagens
-            cinematográficas a shows de luzes—para contar sua história do alto,
+            cinematográficas a shows de luzes para contar sua história do alto,
             com segurança, criatividade e impacto.
           </p>
         </div>
