feat: Update meta descriptions in multiple languages for consistency and improved clarity

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta
       name="description"
       data-translate-key="metaDescription"
-      content="Especialistas em filmagem com drones, transmissão ao vivo aérea e shows de drones com luzes. Transforme seu evento em um espetáculo visual."
+      content="Imagens | Vídeos de Eventos | Show de Drones de Luz"
     />
     <meta
       name="keywords"
@@ -25,7 +25,7 @@
     <meta property="og:url" content="https://dronyimagem.com.br/" />
     <meta
       property="og:image"
-      content="https://mattosvmp.github.io/site-drones-empresa/image4.png"
+      content="https://dronyimagem.com.br/logo-dronyimagem.png"
     />
     <meta
       property="og:description"
