feat: Update Open Graph descriptions for consistency across languages and add new og-image.png

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <meta property="og:url" content="https://dronyimagem.com.br/" />
     <meta
       property="og:image"
-      content="https://dronyimagem.com.br/logo-dronyimagem.png"
+      content="https://dronyimagem.com.br/og-image.png"
     />
     <meta
       property="og:description"
       data-translate-key="ogDescription"
-      content="Especialistas em filmagem com drones, transmissão ao vivo aérea e shows de drones com luzes. Transforme seu evento em um espetáculo visual."
+      content="Imagens | Vídeos de Eventos | Show de Drones de Luz"
     />
     <meta
       property="og:site_name"
