--- a/galeria-videos.html
+++ b/galeria-videos.html
@@ -63,32 +63,41 @@
         font-style: italic;
       }
 
-      /* CSS PARA O VÍDEO */
-
-      /* Invólucro para o vídeo do "Shorts" */
-      .video-wrapper-shorts {
+      /* --- CSS PARA O PLAYER DE VÍDEO (16:9) --- */
+      .video-wrapper {
         position: relative;
-        /* Define a proporção 9:16 (vertical) */
-        padding-top: 177.77%; /* (16 / 9 * 100) */
+        padding-top: 56.25%; /* Proporção 16:9 */
         height: 0;
         overflow: hidden;
         border-radius: 12px;
-
-        /* Limita o tamanho no desktop para parecer um celular */
-        max-width: 320px;
-        margin: 0 auto; /* Centraliza o vídeo */
+        max-width: 100%;
+        margin: 0 auto;
         border: 1px solid #333;
         background-color: #111;
       }
-
-      /* O Iframe preenche o invólucro */
-      .video-wrapper-shorts iframe {
+      .video-wrapper iframe {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
         border: 0;
+      }
+
+      /* --- NOVO CSS PARA TÍTULOS DE TÓPICO --- */
+      .video-topic-title {
+        font-size: 1.8rem;
+        font-weight: 700;
+        color: #fff; /* Branco */
+        margin-top: 60px; /* Espaço ACIMA do título */
+        margin-bottom: 20px; /* Espaço ABAIXO do título */
+        text-align: left;
+        border-bottom: 1px solid var(--accent-color);
+        padding-bottom: 10px;
+      }
+      /* Adiciona margem ao primeiro título para não colar no subtítulo */
+      .video-topic-title:first-of-type {
+        margin-top: 40px;
       }
     </style>
   </head>
@@ -109,11 +118,25 @@
         <h1>Galeria de Vídeos</h1>
         <p class="subtitle">Nossas melhores produções aéreas em movimento.</p>
 
-        <div class="video-wrapper-shorts">
+        <h2 class="video-topic-title">Shorts & Destaques Rápidos</h2>
+        <div class="video-wrapper">
           <iframe
             width="560"
             height="315"
             src="https://www.youtube.com/embed/-JheMRuMROc"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+        </div>
+
+        <h2 class="video-topic-title">Produções e Eventos</h2>
+        <div class="video-wrapper">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/a5HMyLuj_Cc"
             title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
