refactor: Update comments and clean up video topic section in HTML

--- a/galeria-videos.html
+++ b/galeria-videos.html
@@ -84,7 +84,7 @@
         border: 0;
       }
 
-      /* --- NOVO CSS PARA TÍTULOS DE TÓPICO --- */
+      /* --- CSS PARA TÍTULOS DE TÓPICO --- */
       .video-topic-title {
         font-size: 1.8rem;
         font-weight: 700;
@@ -117,19 +117,6 @@
       <div class="container">
         <h1>Galeria de Vídeos</h1>
         <p class="subtitle">Nossas melhores produções aéreas em movimento.</p>
-
-        <h2 class="video-topic-title">Shorts & Destaques Rápidos</h2>
-        <div class="video-wrapper">
-          <iframe
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/-JheMRuMROc"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          ></iframe>
-        </div>
 
         <h2 class="video-topic-title">Produções e Eventos</h2>
         <div class="video-wrapper">
