--- a/galeria-fotos.html
+++ b/galeria-fotos.html
@@ -3,6 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-17693491481"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "AW-17693491481");
+
+      gtag("config", "G-XPLS30LR38");
+    </script>
     <title>Galeria de Fotos - DronyImagem</title>
     <link rel="stylesheet" href="css/style.css" />
     <link
