feat: Update video topic title from "Eventos" to "Imobiliárias" in galeria-videos.html

--- a/galeria-videos.html
+++ b/galeria-videos.html
@@ -128,7 +128,7 @@
           ></iframe>
         </div>
 
-        <h2 class="video-topic-title">Eventos</h2>
+        <h2 class="video-topic-title">Imobiliárias</h2>
         <div class="video-wrapper">
           <iframe
             width="560"
