feat: Add Sancticom credit section to footer with logo and link

--- a/index.html
+++ b/index.html
@@ -648,6 +648,18 @@
           <p data-translate-key="footerDev">
             Desenvolvido com paixão pela tecnologia aérea.
           </p>
+
+          <p class="sancticom-credit">
+            <a
+              href="https://sancticom.com.br"
+              target="_blank"
+              rel="noopener noreferrer"
+              title="Desenvolvido por Sancticom"
+            >
+              <img src="img/sancticom-icon-white.svg" alt="Ícone Sancticom" />
+              <span>Desenvolvido por <strong>Sancticom</strong></span>
+            </a>
+          </p>
         </div>
       </div>
     </footer>
