feat: Add translation keys and update titles for photo and video galleries, and Lumasky page

--- a/galeria-fotos.html
+++ b/galeria-fotos.html
@@ -18,7 +18,9 @@
 
       gtag("config", "G-XPLS30LR38");
     </script>
-    <title>Galeria de Fotos - DronyImagem</title>
+    <title data-translate-key="photoGalleryTitle">
+      Galeria de Fotos - DronyImagem
+    </title>
     <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap"
@@ -60,7 +62,7 @@
         padding: 60px 0;
       }
       .page-content .container {
-        max-width: 800px; /* Mantém o container centralizado */
+        max-width: 800px;
       }
       .page-content h1 {
         font-size: 2.8rem;
@@ -92,21 +94,25 @@
           <a href="index.html">DronyImagem</a>
         </div>
         <div class="back-link">
-          <a href="index.html#portifolio">← Voltar ao Portfólio</a>
+          <a href="index.html#portifolio" data-translate-key="backToPortfolio"
+            >← Voltar ao Portfólio</a
+          >
         </div>
       </div>
     </header>
 
     <main class="page-content">
       <div class="container">
-        <h1>Galeria de Fotos</h1>
-        <p class="subtitle">
+        <h1 data-translate-key="photoGalleryTitle">Galeria de Fotos</h1>
+        <p class="subtitle" data-translate-key="photoGallerySubtitle">
           Projetos e momentos incríveis capturados por nossas lentes.
         </p>
-        <p class="placeholder">
+        <p class="placeholder" data-translate-key="galleryPlaceholder">
           Nossa galeria de fotos está sendo atualizada. Volte em breve!
         </p>
       </div>
     </main>
+
+    <script src="script.js"></script>
   </body>
 </html>
