--- a/galeria-videos.html
+++ b/galeria-videos.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Galeria de Vídeos - DronyImagem</title>
+    <title data-translate-key="videoGalleryTitle">
+      Galeria de Vídeos - DronyImagem
+    </title>
     <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap"
@@ -105,17 +107,23 @@
           <a href="index.html">DronyImagem</a>
         </div>
         <div class="back-link">
-          <a href="index.html#portifolio">← Voltar ao Portfólio</a>
+          <a href="index.html#portifolio" data-translate-key="backToPortfolio"
+            >← Voltar ao Portfólio</a
+          >
         </div>
       </div>
     </header>
 
     <main class="page-content">
       <div class="container">
-        <h1>Galeria de Vídeos</h1>
-        <p class="subtitle">Nossas melhores produções aéreas em movimento.</p>
+        <h1 data-translate-key="videoGalleryTitle">Galeria de Vídeos</h1>
+        <p class="subtitle" data-translate-key="videoGallerySubtitle">
+          Nossas melhores produções aéreas em movimento.
+        </p>
 
-        <h2 class="video-topic-title">Estabelecimentos Comerciais</h2>
+        <h2 class="video-topic-title" data-translate-key="videoTopicCommercial">
+          Estabelecimentos Comerciais
+        </h2>
         <div class="video-wrapper">
           <iframe
             width="560"
@@ -128,7 +136,9 @@
           ></iframe>
         </div>
 
-        <h2 class="video-topic-title">Imobiliárias</h2>
+        <h2 class="video-topic-title" data-translate-key="videoTopicRealEstate">
+          Imobiliárias
+        </h2>
         <div class="video-wrapper">
           <iframe
             width="560"
@@ -142,5 +152,7 @@
         </div>
       </div>
     </main>
+
+    <script src="script.js"></script>
   </body>
 </html>
