--- a/lumasky.html
+++ b/lumasky.html
@@ -18,7 +18,9 @@
 
       gtag("config", "G-XPLS30LR38");
     </script>
-    <title>Shows de Drones com Luzes - DronyImagem</title>
+    <title data-translate-key="lumaskyPageTitle">
+      Shows de Drones com Luzes - DronyImagem
+    </title>
 
     <link rel="stylesheet" href="css/style.css" />
 
@@ -116,33 +118,37 @@
           <a href="index.html">DronyImagem</a>
         </div>
         <div class="back-link">
-          <a href="index.html#solucoes">← Voltar para Soluções</a>
+          <a href="index.html#solucoes" data-translate-key="backToSolutions"
+            >← Voltar para Soluções</a
+          >
         </div>
       </div>
     </header>
 
     <main class="page-content">
       <div class="container">
-        <h1>O Futuro do Entretenimento: Shows de Drones com Luzes</h1>
-        <p class="subtitle">
+        <h1 data-translate-key="lumaskyPageTitle">
+          O Futuro do Entretenimento: Shows de Drones com Luzes
+        </h1>
+        <p class="subtitle" data-translate-key="lumaskyPageSubtitle">
           Uma sinfonia de tecnologia e arte que transforma o céu noturno.
         </p>
 
-        <p>
+        <p data-translate-key="lumaskyP1">
           Como representantes da Lumasky no Brasil, a DronyImagem traz para o
           seu evento uma das formas mais inovadoras e espetaculares de
           entretenimento visual disponíveis hoje: os shows de drones
           coreografados.
         </p>
 
-        <h2>O que é um Show de Drones?</h2>
-        <p>
+        <h2 data-translate-key="lumaskyH2_1">O que é um Show de Drones?</h2>
+        <p data-translate-key="lumaskyP2">
           Imagine centenas, ou até milhares, de drones equipados com potentes
           luzes LED subindo aos céus em perfeita sincronia. Eles se movem como
           um balé tecnológico, formando logotipos, imagens 3D, textos e
           animações dinâmicas no ar.
         </p>
-        <p>
+        <p data-translate-key="lumaskyP3">
           Diferente dos tradicionais fogos de artifício, os shows de drones são
           mais silenciosos, reutilizáveis, ecologicamente corretos e oferecem um
           nível de personalização e precisão artística impossível de alcançar de
@@ -150,8 +156,8 @@
           criar um momento "uau" que seu público jamais esquecerá.
         </p>
 
-        <h2>Como Funciona?</h2>
-        <p>
+        <h2 data-translate-key="lumaskyH2_2">Como Funciona?</h2>
+        <p data-translate-key="lumaskyP4">
           Cada show é meticulosamente planejado em software 3D, onde coreógrafos
           e designers criam a sequência visual completa, sincronizando cada
           movimento de drone com uma trilha sonora. No dia do evento, uma
@@ -160,8 +166,10 @@
           centimétrica, de forma totalmente segura.
         </p>
 
-        <h2>Ideal para Qualquer Grande Evento</h2>
-        <p>
+        <h2 data-translate-key="lumaskyH2_3">
+          Ideal para Qualquer Grande Evento
+        </h2>
+        <p data-translate-key="lumaskyP5">
           Seja para o lançamento de um produto, a abertura de um festival, uma
           celebração corporativa, um casamento grandioso ou uma ativação de
           marca, os shows de drones são a escolha perfeita para quem busca
@@ -175,10 +183,13 @@
             target="_blank"
             rel="noopener noreferrer"
             class="btn-principal"
+            data-translate-key="lumaskyCtaBtn"
             >Visite o site oficial da Lumasky</a
           >
         </div>
       </div>
     </main>
+
+    <script src="script.js"></script>
   </body>
 </html>
