feat: Add video topic section for Postal Cards and update translation keys

--- a/galeria-videos.html
+++ b/galeria-videos.html
@@ -182,6 +182,24 @@
             allowfullscreen
           ></iframe>
         </div>
+
+        <h2
+          class="video-topic-title"
+          data-translate-key="videoTopicPostalCards"
+        >
+          Cartões Postais
+        </h2>
+        <div class="video-wrapper">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/O_VP6VHp9KU"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+        </div>
       </div>
     </main>
 
